--- a/project_1/src/main/webapp/admin/assets/custom/popup.css
+++ b/project_1/src/main/webapp/admin/assets/custom/popup.css
@@ -1,25 +1,4 @@
-* {
-    box-sizing: border-box;
-}
-
-/* Full-width input fields */
-textarea, textarea {
-    width: 100%;
-    min-height: 100px;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-}
-
-/* Add a background color when the inputs get focus */
-textarea:focus, textarea:focus {
-    background-color: #ddd;
-    outline: none;
-}
-
-input[type=text], input[type=password] {
+input[type=text], input[type=password], textarea, input[type=number], select {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -29,14 +8,14 @@ input[type=text], input[type=password] {
 }
 
 /* Add a background color when the inputs get focus */
-input[type=text]:focus, input[type=password]:focus {
+input[type=text]:focus, input[type=password]:focus, textarea:focus, input[type=number]:focus, select:focus {
     background-color: #ddd;
     outline: none;
 }
 
 /* Set a style for all buttons */
 button {
-    background-color: #4CAF50;
+    background-color: #0090E3;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -123,4 +102,87 @@ hr {
     .cancelbtn, .signupbtn {
         width: 100%;
     }
+}
+.file-upload {
+    background-color: #ffffff;
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+}
+
+.file-upload-content {
+    display: none;
+    text-align: center;
+}
+
+.file-upload-input {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.image-upload-wrap {
+    margin-top: 20px;
+    border: 4px dashed #1FB264;
+    position: relative;
+}
+
+.image-dropping,
+.image-upload-wrap:hover {
+    background-color: #1FB264;
+    border: 4px dashed #ffffff;
+}
+
+.image-title-wrap {
+    padding: 0 15px 15px 15px;
+    color: #222;
+}
+
+.drag-text {
+    text-align: center;
+}
+
+.drag-text h3 {
+    font-weight: 100;
+    text-transform: uppercase;
+    color: #15824B;
+    padding: 60px 0;
+}
+
+.file-upload-image {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+}
+
+.remove-image {
+    width: 200px;
+    margin: 0;
+    color: #fff;
+    background: #cd4535;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    border-bottom: 4px solid #b02818;
+    transition: all .2s ease;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.remove-image:hover {
+    background: #c13b2a;
+    color: #ffffff;
+    transition: all .2s ease;
+    cursor: pointer;
+}
+
+.remove-image:active {
+    border: 0;
+    transition: all .2s ease;
 }
