layout admin author

--- a/project_1/src/main/webapp/client/assets/css/animate.css
+++ b/project_1/src/main/webapp/client/assets/css/animate.css
@@ -3272,3 +3272,8 @@ Copyright (c) 2015 Daniel Eden
   animation-name: slideOutUp;
 }
 
+#message-error-login{
+  color: red;
+  text-trim: normal;
+  margin-top: 10px;
+}
