update client index

--- a/project_1/src/main/webapp/client/assets/style.css
+++ b/project_1/src/main/webapp/client/assets/style.css
@@ -2965,13 +2965,6 @@ nav.menu .cr-dropdown ul {
 .left-menu ul li a:hover {
     color: #f07c29;
 }
-.left-menu ul li a:before {
-    content: "ï„…";
-    display: inline-block;
-    font-family: "FontAwesome";
-    font-size: 16px;
-    margin-right: 20px;
-}
 .left-menu ul li a span {
     color: #333;
     display: inline-block;
@@ -5669,3 +5662,6 @@ p.lost-password a:hover {
     display: none;
 }
 
+a {
+    cursor: pointer;
+}
